# homework-2

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: base_order.py  base_product.py  category.py  lawn_grass.py  order.py  product.py  product_iterator.py  repr_mixin.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_lawn_grass.py  test_order.py  test_product.py  test_product_iterator.py  test_repr_mixin.py  test_smartphone.py
